# Project-Starva

./: .gitignore  README.md  index.html
backend/: pyproject.toml
backend/app/: main.py  rag_engine.py
starva-be/: main.py  pyproject.toml
starva-be/app/databases/: db_connection.py  db_postgres.py  db_zvec.py  init_db.py
starva-fe/: package-lock.json  package.json
