[project]
name = "design-rag-backend"
version = "0.1.0"
description = "FastAPI backend for RAG-based symbol & design suggestions"
authors = ["You <you@example.com>"]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
# For a real RAG pipeline you might add: "rag" = ["langchain", "sentence-transformers", ...]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
